--- a/scss/layout/_promo-socios.scss
+++ b/scss/layout/_promo-socios.scss
@@ -2,12 +2,15 @@
 
 .promo-socios{
     background-color: $color-cda;
+    padding: 5px;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: wrap;
     p{
         color: #1A1A1A;
         text-align: center;
         font-style: oblique;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: 700;
-        padding: 15px;
     }
 }
