--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 // LAYOUT
 @import 'layout/header';
 @import 'layout/promo-socios';
+@import 'layout/media768';
+@import 'layout/main';
 
 // BASE
 @import 'base/reset';
