--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,7 +4,7 @@ header{
    display: flex;
    min-height: 70px;
    justify-content: space-between;
-   background-color: #1a1a1a;
+   background-color: $color-claro;
    align-items: center;
    padding: 10px;
    border-bottom: 1px solid $color-cda;
