--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'layout/promo-socios';
 @import 'layout/media768';
 @import 'layout/main';
+@import 'layout/footer';
 
 // BASE
 @import 'base/reset';
