--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -64,6 +64,7 @@
         justify-content: space-evenly;
         flex-wrap: wrap;
         text-align: center;
+        margin-bottom: 50px;
         
         .refuerzo{
             margin-top: 20px;
