--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -33,4 +33,11 @@
             }
         }
     }   
+    footer{
+            .grupo-1{
+                width: 90%;
+                grid-template-columns: repeat(1, 1fr);
+                grid-gap: 20px;
+            }
+        }
 }
