--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -32,12 +32,21 @@
                 justify-content: center;
             }
         }
-    }   
-    footer{
-            .grupo-1{
-                width: 90%;
-                grid-template-columns: repeat(1, 1fr);
-                grid-gap: 20px;
-            }
+    }
+    .container-plantel{
+        
+        img{
+            flex-wrap: wrap;
+            width: 90%;
+            border-radius: 10px;
         }
+        
+    } 
+    footer{
+        .grupo-1{
+            width: 90%;
+            grid-template-columns: repeat(1, 1fr);
+            grid-gap: 20px;
+        }
+    }
 }
