--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -42,6 +42,14 @@
         }
         
     } 
+    .container-socios{
+        h6{
+            color: $color-cda;
+            font-size: 20px;
+            text-align: center;
+            padding: 20px;            
+        }
+    }
     footer{
         .grupo-1{
             width: 90%;
