--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -17,6 +17,7 @@
             min-height: 100px;
             max-height: 800px;
             border-radius: 10px;
+            cursor: pointer;
         }
     }
     .partidos{
@@ -32,6 +33,7 @@
                 align-items: center;
                 justify-content: center;
                 border-radius: 10px;
+                cursor: pointer;
             }
         }
     }
@@ -67,6 +69,7 @@
         margin-bottom: 50px;
         
         .refuerzo{
+            cursor: pointer;
             margin-top: 20px;
             background-color: $color-cda;
             border-radius: 10px;
@@ -136,6 +139,19 @@
                     }
                 }
             }
+        }
+    }
+}
+.container-socios{
+    h6{
+        color: $color-cda;
+        font-size: 25px;
+        text-align: center;
+        padding: 150px;
+        &:hover{
+            transition: 300ms;
+            color: black;
+            background-color: $color-cda;
         }
     }
 }
