--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,48 @@ header nav ul li a:hover {
   background-color: #fac232;
 }
 
+.container-futbol .noticia {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  background-color: #fae332;
+  border: 2px solid #fac232;
+  border-radius: 20px;
+  max-width: 700px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+.container-futbol .noticia h2 {
+  text-align: center;
+  font-size: 35px;
+  margin: 20px;
+  text-decoration: underline;
+}
+.container-futbol .noticia p {
+  text-align: center;
+  font-size: 22px;
+}
+.container-futbol .noticia a {
+  align-items: center;
+  text-decoration: none;
+  color: darkblue;
+}
+.container-futbol .noticia a:hover {
+  background-color: black;
+  color: white;
+  transition: 1s;
+  padding: 10px;
+  border-radius: 10px;
+}
+.container-futbol .noticia img {
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+}
+
 footer {
   width: 100%;
   background-color: #1a1a1a;
