--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -155,3 +155,47 @@
         }
     }
 }
+.container-futbol{
+    .noticia{
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        color: black;
+        background-color: $color-noticia;
+        border: 2px solid $color-cda;
+        border-radius: 20px;
+        max-width: 700px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        cursor: pointer;
+        
+        h2{
+            text-align: center;
+            font-size: 35px;
+            margin: 20px;
+            text-decoration: underline;
+        }
+        p{
+            text-align: center;
+            font-size: 22px;
+        }
+        a{
+            align-items: center;
+            text-decoration: none;
+            color: darkblue;
+            &:hover{
+                background-color: black;
+                color: white;
+                transition: 1s;
+                padding: 10px;
+                border-radius: 10px;
+            }
+        }
+        img{
+            width: 400px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border-radius: 20px;
+        }
+    }
+}
