futbol y scss terminadox2

--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -50,6 +50,14 @@
             padding: 20px;            
         }
     }
+    .container-futbol{
+        .noticia{
+            
+            img{
+                max-width: 300px;
+            }
+        }
+    }
     footer{
         .grupo-1{
             width: 90%;
