--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,9 @@ header nav ul li a:hover {
     text-align: center;
     padding: 20px;
   }
+  .container-futbol .noticia img {
+    max-width: 300px;
+  }
   footer .grupo-1 {
     width: 90%;
     grid-template-columns: repeat(1, 1fr);
